fix OAuth login

--- a/frontend/src/app/shop/shop.component.html
+++ b/frontend/src/app/shop/shop.component.html
@@ -34,7 +34,7 @@
           <option value="Price: High to Low">Price: High to Low</option>
           <option value="Newest First">Newest First</option>
         </select>
-        <span class="productCount">Showing {{ productList.length }} products</span>
+        <span class="productCount">Showing {{ products.length }} products</span>
       </div>
     </div>
     <!-- Products Grid -->
