Fix fetch processing the API response as a Response object instead as an Item array

--- a/frontend/src/app/hero-01/hero-01.component.html
+++ b/frontend/src/app/hero-01/hero-01.component.html
@@ -1,13 +1,15 @@
 <div class="hero01">
   <div class="image">
-    <div class="image-placeholder"></div>
+    <div class="image-placeholder">
+      <img
+        src="https://i.ibb.co/40rrwBG/57044-tolle-natur-und-wasser-hintergrundbilder-1920x1080.jpg"
+        alt="57044-tolle-natur-und-wasser-hintergrundbilder-1920x1080"
+        style="width: 100%"
+      />
+    </div>
   </div>
-  <div class="text-slogan">Insert cool slogan here</div>
+  <div class="text-slogan">Stocked up. Refreshed. Ready.</div>
   <div class="content">
-    <span class="text-subtitle">
-      Create screens directly in Method or add your images from Sketch or Figma. You can even sync
-      designs from your cloud storage!
-    </span>
     <button class="shopAll" routerLink="/shop-all">Shop All</button>
   </div>
 </div>
