--- a/frontend/src/app/product-page-1/product-page-1.component.html
+++ b/frontend/src/app/product-page-1/product-page-1.component.html
@@ -10,24 +10,24 @@
           />
         } @else {
           <img
-            [src]="productList[id].imageUrl"
-            [alt]="productList[id].title"
+            [src]="products[id].imageUrl"
+            [alt]="products[id].title"
             style="width: 100%; aspect-ratio: 1; object-fit: cover"
           />
         }
       </div>
     </div>
     <div class="textContainer">
-      <span class="textName">{{ productList[id].title }}</span>
+      <span class="textName">{{ products[id].title }}</span>
       @if (getSelectedProduct()) {
         <span class="textPrice">$ {{ getSelectedProduct()?.price }}</span>
         <span class="textDesc">
           {{ getSelectedProduct()?.description }}
         </span>
       } @else {
-        <span class="textPrice">$ {{ productList[id].price }}</span>
+        <span class="textPrice">$ {{ products[id].price }}</span>
         <span class="textDesc">
-          {{ productList[id].description }}
+          {{ products[id].description }}
         </span>
       }
       <div class="amount">
@@ -39,11 +39,11 @@
         @if (selectedItem() === '') {
           <option value="" selected="selected">- None -</option>
         }
-        @for (product of filterItemsByName(productList[id].title); track product.id) {
+        @for (product of filterItemsByName(products[id].title); track product.id) {
           <option [value]="product.id">{{ product.size }}</option>
         }
       </select>
-      <span class="textHeight">Height of model: 189 cm. / 6′ 2″ Size 41</span>
+      <!--<span class="textHeight">Height of model: 189 cm. / 6′ 2″ Size 41</span>-->
       <div class="buttonContainer">
         <button (click)="addToCart()" class="addToCart">Add to Cart - ${{ sumCost() }}</button>
         <button (click)="buyNow()" class="buy">Buy Now</button>
