--- a/frontend/src/app/login-email/login-email.component.scss
+++ b/frontend/src/app/login-email/login-email.component.scss
@@ -33,10 +33,11 @@
   gap: 1.5rem;
   border-radius: 0.5rem;
   transition: 0.5s;
-}.ui-components---login---sign-in-with-social:hover {
+}
+.ui-components---login---sign-in-with-social:hover {
   transition: 0.5s;
   filter: invert(100%);
-  box-shadow: 0 0 0 100em white ;
+  box-shadow: 0 0 0 100em white;
 }
 .text-login-via-OAuth {
   color: #000000;
@@ -79,14 +80,16 @@
 
 .inputField:hover {
   border: 2px solid #000000;
-  transition: border .4s;
+  transition: border 0.4s;
 }
 
 .rememberMe {
   display: flex;
   color: #000000;
   font-size: clamp(0.75rem, 1.5vw, 0.875rem);
-  font-family: Public Sans, sans-serif;
+  font-family:
+    Public Sans,
+    sans-serif;
   letter-spacing: -0.3px;
   text-decoration: none;
   font-weight: 400;
@@ -94,6 +97,8 @@
   white-space: nowrap;
   cursor: pointer;
   user-select: none;
+  float: left;
+  margin-right: 0.5em;
 }
 
 .rememberMe:hover {
@@ -109,26 +114,29 @@
 
 .checkbox-container {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   gap: 0.75rem;
+  width: 100%;
 }
 
 .forgotPasswd {
   display: flex;
   color: hsl(0, 0%, 0%);
   font-size: clamp(0.75rem, 1.5vw, 0.875rem);
-  font-family: Public Sans, sans-serif;
+  font-family:
+    Public Sans,
+    sans-serif;
   letter-spacing: -0.3px;
   text-decoration: none;
   font-weight: 700;
   text-align: left;
   white-space: nowrap;
-  transition: .1s;
+  transition: 0.1s;
   width: 50%;
 }
 
-.underline{
+.underline {
   display: inline-block;
   background-image: linear-gradient(#000 0 0);
   background-position: 0 100%;
@@ -136,14 +144,14 @@
   background-repeat: no-repeat;
   transition: background-size 0.3s ease-in-out;
 }
-.underline:hover{
+.underline:hover {
   background-size: 100% 1px;
 }
 
-.forgotPasswd:hover{
+.forgotPasswd:hover {
   cursor: pointer;
   // text-decoration: underline;
-  transition: .1s;
+  transition: 0.1s;
 }
 
 .checkboxStayLoggedIn {
@@ -172,4 +180,32 @@
   width: 100%;
   height: auto;
   display: flex;
+}
+
+.login-button {
+  display: block;
+  padding: 0.75rem 1.5rem;
+  border: 1px solid #000000;
+  border-radius: 0.25rem;
+  background-color: #ffffff;
+  color: #000000;
+  font-size: clamp(0.75rem, 1.5vw, 0.875rem);
+  font-family:
+    Public Sans,
+    sans-serif;
+  letter-spacing: -0.3px;
+  text-decoration: none;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  transition: 0.3s;
+  width: 40%;
+}
+
+.login-button:hover {
+  border: 1px solid #ffffff;
+  cursor: pointer;
+  background-color: #000000;
+  color: #ffffff;
+  transition: 0.3s;
 }
