--- a/frontend/src/app/login-oauth/login-oauth.component.scss
+++ b/frontend/src/app/login-oauth/login-oauth.component.scss
@@ -187,7 +187,7 @@
 }
 
 .login-buttons button {
-  display: box;
+  display: block;
   padding: 0.75rem 1.5rem;
   border: 2px solid #000000;
   border-radius: 0.25rem;
